<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <com.beardedhen.androidbootstrap.AwesomeTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:fontFamily="@font/permanent_marker"
            android:textSize="50dp"
            app:bootstrapText="@string/login_title" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/et_login_username"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/btedittext"
            android:fontFamily="@font/custom_font"
            android:hint="@string/enter_username"
            app:bootstrapSize="lg"
            app:roundedCorners="true" />

        <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/et_login_pass"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/btedittext"
            android:ellipsize="start"
            android:fontFamily="@font/custom_font"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            app:bootstrapSize="lg"
            app:roundedCorners="true" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:fontFamily="@font/custom_font"
            android:text="@string/login"
            app:bootstrapBrand="primary"
            app:bootstrapSize="lg"
            app:roundedCorners="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/custom_font"
                android:text="@string/want_signup" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/custom_font"
                android:text="@string/want_signup2" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
