<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.beardedhen.androidbootstrap.BootstrapWell
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/btwell">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/rec_image"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center_horizontal" />

                        <com.beardedhen.androidbootstrap.AwesomeTextView
                            android:id="@+id/rec_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/custom_font"
                            android:textSize="32sp"
                            android:textStyle="bold" />

                        <com.beardedhen.androidbootstrap.AwesomeTextView
                            android:id="@+id/rec_duration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/custom_font"
                            android:text="00:00"
                            android:textSize="16sp" />
                    </LinearLayout>


                </com.beardedhen.androidbootstrap.BootstrapWell>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.beardedhen.androidbootstrap.BootstrapWell
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/btwell">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.beardedhen.androidbootstrap.AwesomeTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/custom_font"
                                android:text="@string/from_release" />

                            <TextView
                                android:id="@+id/release_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:background="?attr/selectableItemBackground"
                                android:clickable="true"
                                android:fontFamily="@font/custom_font"
                                android:textAlignment="center"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="30sp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="40dp" />

                            <com.beardedhen.androidbootstrap.AwesomeTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/custom_font"
                                android:text="@string/by_artist" />

                            <TextView
                                android:id="@+id/artist_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:background="?attr/selectableItemBackground"
                                android:clickable="true"
                                android:fontFamily="@font/custom_font"
                                android:textAlignment="center"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="30sp" />
                        </LinearLayout>

                    </com.beardedhen.androidbootstrap.BootstrapWell>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_youtube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/ripple_button"
            android:drawableRight="@drawable/yt_icon"
            android:fontFamily="@font/custom_font"
            android:padding="20px"
            android:text="@string/youtube_search"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorPrimary" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="15dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/custom_font"
        android:src="@drawable/ic_baseline_playlist_add_24"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>


